trunk/Archive2/4e/cc8bf2192abf75/output
main.cpp: In function 'int two()':
main.cpp:3:28: error: void value not ignored as it ought to be
 int two ( ) { return one ( ); }
                            ^
main.cpp:3:31: warning: control reaches end of non-void function [-Wreturn-type]
 int two ( ) { return one ( ); }
                               ^
